# hrsa-findings-dashboard

./: 404.html  README.md  asset-manifest.json  docker-compose.override.yml  docker-compose.yml  gh-pages.sh  precache-manifest.1fa4ad6262eb8a7ff92d86a03cf7b496.js  service-worker.js  tmuxp.yml
api/: .gitignore  Dockerfile  config.py  entrypoint.sh  init-db.sh  pyproject.toml
api/app/: __init__.py  cli.py  database.py
api/app/auditlog/: __init__.py  models.py  routes.py  schemas.py
api/migrations/fixtures/: hrsa_abv.json  states.json  tags.json
api/migrations/versions/: 598ee65d9b42_tag_data_migration.py  60527b68fb7e_state_data_migration.py  7097281d233d_tags_and_through_table.py  d06e045a2507_hrsa_des_data_migration.py  e002a00998a6_initial_migration.py
api/scraper/: scrapy.cfg
api/scraper/hrsafindings/: helpers.py  middlewares.py  settings.py
api/tests/: conftest.py  mockData.yaml
api/tests/api/: test_filteritems_get.py  test_records_get.py
dashboard/: Dockerfile  README.md  package.json
dashboard/public/: index.html
dashboard/src/: dashboard.tsx  index.tsx  store.ts  types.d.ts
dashboard/src/app/: dashboard.tsx  rootReducer.ts  (+1 more)
etl/: pyproject.toml
etl/hrsafindings/hrsafindings/: helpers.py  items.py  pipelines.py  settings.py
etl/hrsafindings/hrsafindings/spiders/: findings_spider.py
static/css/: 2.b5cf0199.chunk.css  2.b5cf0199.chunk.css.map
static/js/: 2.c784ba0c.chunk.js  2.c784ba0c.chunk.js.LICENSE.txt  2.c784ba0c.chunk.js.map  main.8ee2969a.chunk.js  main.8ee2969a.chunk.js.map  runtime-main.6973ca65.js  runtime-main.6973ca65.js.map
(+48 files in other folders)
