[tool.poetry]
name = "hrsafindings-etl"
version = "0.1.0"
description = ""
authors = ["Yevgeny Bulochnik <yevgeny.bulochnik@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Scrapy = "^2.1.0"

[tool.poetry.dev-dependencies]
ipython = "^7.14.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
